# szempont

./: .gitignore  CLAUDE.md  README.md  Szempont - Milestone Report 20260712 v2 eOptika AI.md  pyproject.toml
app/: .dockerignore  Dockerfile  app.py  barcodes.py  catalog.py  discounts.py  nav.json  requirements.txt
auth/: __init__.py  iap.py  staff.py
contracts/: catalog_source_contract.md  iris_contract.md  pricing_semantics.md
docs/: Szempont - ClearVis Functional Audit 20260715 v1 eOptika AI.md  Szempont - ClearVis IA Map and Decision Menu 20260715 v1 eOptika AI.md  Szempont - Consultation Screen Benchmark 20260715 v1 eOptika AI.md  Szempont - Decisions Log 20260716 v1 eOptika AI.md  Szempont - Gyorstalpalo Probauzem 20260718 v1 eOptika AI.html  Szempont - Mega Review Research Annex 20260718 v1 eOptika AI.md  Szempont - Mi Hol Van Cheat Sheet 20260717 v1 eOptika AI.html  Szempont - Milestone Report W2 20260716 v1 eOptika AI.md  Szempont - Spec Reconciliation 20260712 v1 eOptika AI.md  Szempont - UI Research Brief 20260712 v1 eOptika AI.md  Szempont - W3 Findings Log 20260718 v1 eOptika AI.md  Szempont Execution Spec 20260712 v2 eOptika AI.docx
infra/: Dockerfile.ingest  cloudbuild.yaml  deploy_staging.sh
ingest/: bq_client.py  job.py  source.py
iris/: __init__.py  directory.py  walkins.py
orders/: __init__.py  ids.py  promotions.py  records.py  store.py
pricing/: engine.py  models.py  pair.py  search.py  thickness.py
quotes/: __init__.py  records.py  store.py
tests/: test_auth.py  test_barcodes.py  test_dockerfile.py  test_frames.py  test_ingest.py  (+8 more)
(+33 files in other folders)
